--- a/Assignment1/Assignment1.ipynb
+++ b/Assignment1/Assignment1.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter nb x  10\n",
@@ -414,7 +414,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Please insert your grade(A,B,C,D,F)  a\n"
@@ -466,7 +466,7 @@
     "    print(f'Hello , {name} !')\n",
     "    return\n",
     "\n",
-    "greet('Julia')\n"
+    "greet('Zein')\n"
    ]
   },
   {
@@ -639,7 +639,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "please enter number 10\n",
